2012-08-02 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add new 'config' command (ticket #67).
	* Add new 'list' command (ticket #133).

2012-08-01 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Network supports an optional '0' id (ticket #134).
	* New shine CLI display with options (ticket #105).

2012-07-26 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Nodes could be specified with -n or -w (ticket #48).
	*  -l also select filesystem when -f is missing (ticket #69).

2012-07-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Rewrite command line option management (ticket #35, #38)

2012-06-19 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix over-consumption of memory with fsck (ticket #131).

2012-06-05 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix 'ha_node' handling in storage.conf with backend File (ticket #129).

2012-05-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix exception when checking status on an evicted client (ticket #126).

2012-05-24 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix path syntax checking in ModelFile (ticket #127).

2012-04-30 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add TextTable class as first step for new outputs (ticket #105).

2012-02-14 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.911

2012-02-14 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Model files accept several spaces as separator (ticket #121).

2012-02-13 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Detect and display client connection states (ticket #114).

2012-02-10 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add fsck completion progress tracking and fsck is always run in 
	  -f mode (ticket #107).

2012-02-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix incorrect device size when using a symlink (ticket #119).
	* Display action duration in verbose mode (ticket #120).

2012-02-06 Aurelien Degremont  <aurelien.degremont@cea.fr>