@@ -28,6 +28,15 @@
 #ie: lustre_version=1.8.5
 
 #
+# CLI
+#
+
+# Tell if colored output should be used on command line interface.
+#
+#color=auto
+
+
+#
 # BACKEND 
 #
 
