@@ -22,6 +22,8 @@ syn keyword shineConfKey    status_dir
 syn keyword shineConfKey    log_file
 syn keyword shineConfKey    log_level
 
+syn keyword shineConfKey    color
+
 syn keyword shineConfKey    ssh_connect_timeout
 syn keyword shineConfKey    ssh_fanout
 syn keyword shineConfKey    default_timeout
