@@ -1,6 +1,7 @@
 2012-08-02 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Add new 'config' command (ticket #67).
 	* Add new 'list' command (ticket #133).
+	* Add color option in shine.conf (ticket #136).
 
 2012-08-01 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Network supports an optional '0' id (ticket #134).
